# StormFighting

./: .gitignore  Cargo.toml  build.rs  feedback.txt  launch_player_1.bat  launch_player_2.bat  storm_fighting_plan_tucker.pln  web.bat
docs/: index.html  web.js  web_bg.wasm
docs/palletes/: palette000.pal  palette001.pal  palette003.pal  palette008.pal  palette010.pal  palette012.pal  palette017.pal  palette020.pal  palette021.pal  palette022.pal  palette025.pal
docs/resources/: fireball_main.ase  greyscale_health_bar.aseprite  ryu_character_sheet.json  ryu_pallete.aseprite  scanline_3.aseprite
palletes/: palette002.pal  palette004.pal  palette005.pal  palette006.pal  palette007.pal  palette009.pal  palette011.pal  palette016.pal  palette018.pal  palette019.pal  palette023.pal  palette024.pal
resources/: ryu_character_sheet.json
resources/sheets/ryu/BackwardDash/: 2.ase
resources/sheets/ryu/Blocking/: full.tpf
resources/sheets/ryu/Crouched/: 3.ase  collision.json
resources/sheets/ryu/Crouching/: 1.ase  full.tpf
resources/sheets/ryu/Dizzie/: 1.ase  2.ase  3.ase  4.ase  5.ase  6.ase  7.ase  collision.json  full.tpf
resources/sheets/ryu/ForwardDash/: 2.ase  4.ase  full.tpf
resources/sheets/ryu/ForwardJump/: 11.ase  12.ase  4.ase  7.ase  9.ase  collision.json
resources/sheets/ryu/ForwardRun/: 1.ase  2.ase  4.ase  5.ase  8.ase  full.tpf
resources/sheets/ryu/HeavyAttack/: 10.ase  11.ase  12.ase  3.ase  7.ase  9.ase  full.tpf
resources/sheets/ryu/HeavyCrouchKick/: 2.ase  3.ase  5.ase  7.ase  8.ase  9.ase  collision.json
resources/sheets/ryu/HeavyCrouchingAttack/: 2.ase  4.ase  5.ase  8.ase  collision.json  full.tpf
resources/sheets/ryu/HeavyKick/: 10.ase  11.ase  2.ase  3.ase  4.ase  7.ase  9.ase
resources/sheets/ryu/Idle/: 1.ase  (+4 more)
src/: main.rs
src/game/: animation.rs  character.rs  character_sheet.rs  collision.rs  effects.rs  game.rs  input.rs  menu.rs  mod.rs  net.rs  projectile.rs  round.rs  setup_functions.rs  state_machine.rs  web_net.rs
src/resources/: back_run.ase  backward_dash.ase  backward_run.ase  crouched.ase  crouching.ase  forward_dash.ase  forward_run.ase  heavy_attack.ase  heavy_crouching_attack.ase  heavy_kick.ase  idle.ase  jumping.ase  light_attack.ase  light_crouch_attack.ase  light_kick.ase  medium_attack.ase  medium_kick.ase  ryu_character_sheet.json  special_1.ase
src/shaders/: mod.rs
src/shaders/pallete_shader/: data.rs  mod.rs  pallete_fragment.glsl  shader.rs  vertex.glsl
src/shaders/sprite/: data.rs  fragment.glsl  shader.rs  vertex.glsl
(+212 files in other folders)
