[package]
name = "storm_fighting"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storm = {git = "https://github.com/mooman219/storm"}
hashbrown = { version = "0.11.2", features = ["serde"]}
ggrs = "0.5.1"
structopt = "0.3"
instant = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["serde"] }
getrandom = { version="0.2", features = ["js"] }
serde_json = "1.0"
asefile = "0.3.1"