[package]
name = "storm_fighting"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storm = {git = "https://github.com/mooman219/storm"}
hashbrown = { version = "0.11.2", features = ["serde"]}
ggrs = "0.7.2"
structopt = "0.3"
instant = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["serde"] }
getrandom = { version="0.2", features = ["js"] }
serde_json = "1.0"
asefile = "0.3.1"
time = {git = "https://github.com/time-rs/time", features=["local-offset"]}
simplelog = "^0.10.0"
crevice = {version = "0.8.0", features = ["cgmath"]}
matchbox_socket = {path = "../matchbox/matchbox_socket", features = ["ggrs-socket"]}
futures = "0.3.19"
event-listener = "2.4.0"
async-executor = "1.3.0"
async-channel = "1.4.2"
tokio = {version = "1.15.0", features=["rt"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"